fixed for overflow.

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -101,8 +101,8 @@ pre{
   background-color:#ddd;
   padding:1em;
   border:1px solid #999;
-  overflow:scroll;
-  code { 
+  overflow:auto;
+  code {
     font-size:12.5px;
     font-family:"Monaco", monospace;
   }
